# midi-event-handler

./: .gitignore  Makefile  README.md  build_all.bat  config.yaml  download_web_assets.bat  installer.iss  mapping.yaml  pyproject.toml  snackbox.yaml
.github/workflows/: ci.yml  release.yml
docs/: README.md  editor-page-plan.md  error-handling-refactor.md  manual_en.md  manual_fr.md
docs/assets/: manifest.txt
logging_configs/: config.yaml
src/midi_event_handler/: debug.py  entrypoint.py  launcher.py  main.py
src/midi_event_handler/core/: app.py  event_handler.py  event_indexer.py  event_models.py  exceptions.py  midi_listener.py  midi_outputs.py  structs.py
src/midi_event_handler/core/config/: __init__.py  loader.py  models.py
src/midi_event_handler/core/editor/: __init__.py  state.py
src/midi_event_handler/core/events/: handlers.py  indexer.py  models.py
src/midi_event_handler/core/midi/: listener.py  notes.py  outputs.py  recorder.py  utils.py
src/midi_event_handler/tools/: connection.py  logtools.py  tray.py  updater.py
src/midi_event_handler/web/: app.py  connection.py  context.py  help.py  shutdown.py
src/midi_event_handler/web/routers/: __init__.py  api.py  dashboard.py  partials.py  ws.py
src/midi_event_handler/web/routers/editor/: __init__.py  common.py  event_types.py  events.py  inputs.py  main.py  mapping.py  outputs.py
src/midi_event_handler/web/static/: index.html
src/midi_event_handler/web/static/css/: style.css
src/midi_event_handler/web/static/css/components/: badges.css  base.css  buttons.css  cards.css  dashboard.css  editor.css  forms.css  layout.css  misc.css  modals.css  ports.css  toasts.css
src/midi_event_handler/web/static/js/: app.js  main.js
src/midi_event_handler/web/static/js/modules/: dropzone.js  modal.js  toast.js  utils.js  websocket.js
src/midi_event_handler/web/static/js/pages/: dashboard.js  editor.js  help.js
src/midi_event_handler/web/templates/: base.html  base_with_sidebar.html  dashboard.html  editor.html  help.html  whatsnew.html
src/midi_event_handler/web/templates/macros/: icons.html  modal.html  notes.html
src/midi_event_handler/web/templates/partials/: dashboard_content.html  status_fragment.html
src/midi_event_handler/web/templates/partials/editor/: editor_content.html  resolution_error.html
src/midi_event_handler/web/templates/partials/editor/modals/: confirm_delete.html  confirm_fix_duplicates.html  event_form.html  event_type_form.html  input_form.html  new_mapping_confirm.html  output_form.html  port_form.html  save_blocked.html  save_confirm.html
src/midi_event_handler/web/templates/partials/sidebar/: controls.html  mapping_loader.html  midi_ports.html
tests/: conftest.py  test_api.py  test_config_loader.py  test_editor_state.py  test_exceptions.py  test_handlers.py  test_indexer.py  test_listener.py  test_midi_utils.py  test_models.py  test_notes.py  test_outputs.py  test_updater.py
tools/: build.py  download_web_assets.bat  setup.py
tools/cli/: meh.c  meh.rc
tools/scripts/: debug.bat  start.bat
