[project]
name = "midi-event-handler"
version = "0.1.0"
description = ""
authors = [
    {name = "Julien LANCELOT",email = "julienlancelot91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "mido (>=1.3.3,<2.0.0)",
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-rtmidi (>=1.5.8,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pystray (>=0.19.5,<0.20.0)",
    "pillow (>=11.3.0,<12.0.0)",
]

[tool.poetry]
packages = [{include = "midi_event_handler", from = "src"}]

[tool.poetry.scripts]
setup-web = "tools.setup:setup_web"
start-app = "midi_event_handler.entrypoint:main"
build-app = "tools.build:run"
build-installer = "tools.build:build_inno_installer"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
nuitka = "^2.7.12"
htmlmin = "^0.1.12"
csscompressor = "^0.9.5"
rjsmin = "^1.2.4"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
