[tool.poetry]
name = "midi-event-handler"
version = "0.0.0" # dynamic versioning
description = ""
authors = ["Julien LANCELOT <julienlancelot91@gmail.com>"]
readme = "README.md"
packages = [{include = "midi_event_handler", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4"
mido = "^1.3.3"
fastapi = {version = "^0.116.0", extras = ["standard"]}
pyyaml = "^6.0.2"
python-rtmidi = "^1.5.8"
psutil = "^7.0.0"
pystray = "^0.19.5"
pillow = "^11.3.0"
markdown = "^3.8.2"
requests = "^2.32.4"
packaging = ">=24.0"

[tool.poetry.scripts]
setup-web = "tools.setup:setup_web"
start-app = "midi_event_handler.main:main"
launcher = "midi_event_handler.launcher:main"
debug-midi = "midi_event_handler.debug:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
htmlmin = "^0.1.12"
csscompressor = "^0.9.5"
rjsmin = "^1.2.4"
ruff = "^0.15.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-per-file-ignores = { "__init__.py" = ["F401"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^v?(?P<base>\\d+\\.\\d+\\.\\d+)"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
